--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!---->
         <header>
             <div>
-            <img src="https://github.com/MatheusFelipeM.png" 
+            <img src="https://avatars.githubusercontent.com/u/67381800?s…00&u=05c00edfff151b337c74b27bd336e201704146a5&v=4" 
             alt="Foto do developer">
             </div>
         </header>
